# llm-consultation-system-pavlova-m25-555

./: .gitignore  README.md  docker-compose.yml
auth_service/: Dockerfile  pyproject.toml  pytest.ini  run.ps1
auth_service/app/: __init__.py  main.py
auth_service/app/api/: deps.py  router.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: base.py  models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: test_auth.py  test_security.py
bot_service/: Dockerfile  bot_runner.py  pyproject.toml  pytest.ini
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
bot_service/tests/: conftest.py  test_handlers.py  test_openrouter.py  test_security.py
